# LearnOpenGL

./: CMakeLists.txt  Camera.h  LICENSE  LearnOpenGL.cpp  LearnOpenGL.sln  LearnOpenGL.vcxproj  LearnOpenGL.vcxproj.filters  Shader.h  Test.cpp  glad.c  mesh.h  model.h
Debug/: LearnOpenGL.exe.recipe  LearnOpenGL.ilk  LearnOpenGL.vcxproj.FileListAbsolute.txt  vc142.idb  vc143.idb
Debug/LearnOpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LearnOpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Lession_1/: shaders_uniform.cpp
Lession_10_geometryHouses/: GeometryHouse.cpp
Lession_11_ModelLoad/: ModelLoad.cpp  color.gs
Lession_12_Framebuffers/: Framebuffers.cpp  framebuffers_screen.fs
Lession_13_Instancing/: Instancing.cpp
Lession_14_AntiAliasingOffscreen/: AntiAlisingOffscreen.cpp
Lession_15_AdvancedLighting/: AdvabcedLighting.cpp
Lession_2/: ShaderFromFile.cpp  shader.fs  shader.vs
Lession_3/: LoadTexture.cpp  shader.fs
Lession_4_Coordinate/: Coordinate.cpp  shader.vs
Lession_5_Camera/: Camera.cpp  shader.fs
Lession_6_BaseLight/: BaseLight.cpp
Lession_7_BasicLightSpecular/: Basic_lighting_specular.cpp  color.fs
Lession_8_Material/: Material.cpp  color.fs
Lession_9_LightingMapsSpecular/: LightingMapsSpecular.cpp  color.fs
include/glad/: glad.h
x64/Debug/: vc143.idb
x64/Debug/LearnOpenGL.tlog/: CL.command.1.tlog  LearnOpenGL.lastbuildstate
x64/Release/LearnOpenGL.tlog/: CL.command.1.tlog  LearnOpenGL.lastbuildstate
